deploy/dev/identity-api/deployment.yaml
# Force refresh for ArgoCD
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - identity-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: identity-api
        image: fcavarzare/projeto-reserva:identity-api-ee56ff3524ac59e3bad4accc40fe60bcd1701770
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: identity-api-service
  namespace: dev
spec:
  selector:
    app: identity-api
  ports:
  - port: 80
    targetPort: 8080
